fix(Sidebar): Fix spacing around file tree

--- a/desktop/src/renderer/components/app-project/app-project-sidebar/app-project-sidebar-files/app-project-sidebar-files.css
+++ b/desktop/src/renderer/components/app-project/app-project-sidebar/app-project-sidebar-files/app-project-sidebar-files.css
@@ -12,6 +12,6 @@
 }
 
 ul {
-  @apply list-none p-4 m-0;
+  @apply list-none py-4 pl-4 m-0;
   color: var(--color-neutral-400);
 }
